operators/ibm-application-gateway-operator/26.7.0/manifests/ibm-application-gateway-operator-webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: ibm-application-gateway-operator-webhook-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: ibm-application-gateway-operator
    control-plane: controller-manager
status:
  loadBalancer: {}
